<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/textfieldlinearlayout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_str"/>
    <EditText
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_str"/>
    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dob_str"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_str"/>
    <EditText
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gender_str"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/address_str"/>
    <EditText
        android:id="@+id/ph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ph_no_str"/>
    <EditText
        android:id="@+id/dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/department_str"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttonlinearlayout">

    <Button
        android:id="@+id/loaddatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="getEmployeeData"
        android:text="@string/load_data_str"
        android:textSize="20sp"
        android:layout_margin="20dp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/insertbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="insertEmployee"
        android:text="@string/insert_str"
        android:textSize="20sp"
        android:layout_margin="20dp"
        tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttonlinearlayout1">
    <Button
        android:id="@+id/deletebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="deleteEmployeeData"
        android:text="@string/delete_data_str"
        android:textSize="20sp"
        tools:ignore="UsingOnClickInXml"
        android:layout_margin="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="updateEmployeeData"
        android:text="@string/update_data_str"
        android:textSize="20sp"
        android:layout_margin="20dp"
        tools:ignore="UsingOnClickInXml" /></LinearLayout>

</LinearLayout>